Reduce spacing between parent title and title (fix).

--- a/css/main.css
+++ b/css/main.css
@@ -491,16 +491,15 @@ article {
   font-family: Arial, sans-serif;
   margin-bottom: 10px;
 }
-
-/* line 127, ../sass/main.sass */
-.parent-title {
+/* line 126, ../sass/main.sass */
+#content p.parent-title {
   color: #cccccc;
   margin-bottom: 0;
   font-family: "Bebas Neue Regular", Arial, sans-serif;
   font-size: 1.125em;
 }
 
-/* line 134, ../sass/main.sass */
+/* line 133, ../sass/main.sass */
 #footer-container {
   background: #0059b2;
   clear: both;
@@ -508,7 +507,7 @@ article {
   *zoom: 1;
 }
 
-/* line 139, ../sass/main.sass */
+/* line 138, ../sass/main.sass */
 #footer {
   display: inline;
   float: left;
@@ -519,13 +518,13 @@ article {
   margin-bottom: 16px;
 }
 
-/* line 145, ../sass/main.sass */
+/* line 144, ../sass/main.sass */
 #footer-items {
   overflow: hidden;
   *zoom: 1;
 }
 
-/* line 148, ../sass/main.sass */
+/* line 147, ../sass/main.sass */
 #footer-menu {
   display: inline;
   float: left;
@@ -535,7 +534,7 @@ article {
   margin-left: 0;
 }
 
-/* line 152, ../sass/main.sass */
+/* line 151, ../sass/main.sass */
 #footer-widget {
   display: inline;
   float: left;
@@ -545,7 +544,7 @@ article {
   margin-right: 0;
 }
 
-/* line 156, ../sass/main.sass */
+/* line 155, ../sass/main.sass */
 #colophon {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -553,14 +552,14 @@ article {
   clear: both;
 }
 
-/* line 163, ../sass/main.sass */
+/* line 162, ../sass/main.sass */
 #menu-footer-menu {
   padding-right: 4px;
   text-align: right;
   border-right: 2px solid white;
 }
 
-/* line 168, ../sass/main.sass */
+/* line 167, ../sass/main.sass */
 .widget_zilla_social_widget {
   list-style: none;
   margin-top: 5px;
